First Assignment Added

--- a/set_1_code/First_code.ipynb
+++ b/set_1_code/First_code.ipynb
@@ -9,7 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/underactuated/src\n"
+      "[Errno 2] No such file or directory: '/underactuated/src'\n",
+      "/Users/siddharthnayak/Downloads/drake_docker_utility_scripts/set_1_code\n"
      ]
     }
    ],
@@ -24,7 +25,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import math\n",
+    "import math \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import HTML\n",
@@ -2160,9 +2161,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CMakeLists.txt  README.md           \u001b[0m\u001b[01;34mfigures\u001b[0m/    \u001b[01;34mscripts\u001b[0m/     underactuated.css\r\n",
-      "\u001b[01;34mHTMLBook\u001b[0m/       \u001b[01;34mcmake\u001b[0m/              \u001b[01;34mhighlight\u001b[0m/  \u001b[01;34msrc\u001b[0m/         underactuated.html\r\n",
-      "\u001b[01;34mMathJax\u001b[0m/        drake_version.json  index.html  tocite.html  underactuated.xpr\r\n"
+      "CMakeLists.txt  README.md           \u001b[0m\u001b[01;34mfigures\u001b[0m/    \u001b[01;34mscripts\u001b[0m/     underactuated.css\n",
+      "\u001b[01;34mHTMLBook\u001b[0m/       \u001b[01;34mcmake\u001b[0m/              \u001b[01;34mhighlight\u001b[0m/  \u001b[01;34msrc\u001b[0m/         underactuated.html\n",
+      "\u001b[01;34mMathJax\u001b[0m/        drake_version.json  index.html  tocite.html  underactuated.xpr\n"
      ]
     }
    ],
@@ -2180,21 +2181,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
