--- a/set_2/set_2.ipynb
+++ b/set_2/set_2.ipynb
@@ -129,6 +129,9 @@
    "source": [
     "#### Short answer explanation for 1.1. Provide a brief justification of your choice of $Q_f$ in this cell.\n",
     "\n",
+    "\n",
+    "YOUR ANSWER HERE\n",
+    "\n",
     "Because we just need to penalise the yaw angle error, we can turn every element to zeros except the bottom-right one. \n",
     "\n",
     "So we get the cost-function $J=\\psi^2$\n"
@@ -154,9 +157,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n"
+      "[[-0.25  0.5  -0.  ]\n",
+      " [ 0.5  -1.   -0.  ]\n",
+      " [-0.   -0.   -0.  ]]\n"
      ]
     }
    ],
@@ -171,6 +174,11 @@
     "def get_Q_f_problem_1_2():\n",
     "    Qf = np.zeros((3, 3))\n",
     "    # YOUR CODE HERE TO SET Qf\n",
+    "    m=0.5\n",
+    "    Qf[0,0]=m**2  # put m^2 in y=mx\n",
+    "    Qf[0,1]=-m    #put -m \n",
+    "    Qf[1,0]=-m    #put -m \n",
+    "    Qf[1,1]=1\n",
     "    return Qf\n",
     "\n",
     "print get_Q_f_problem_1_2()"
@@ -182,7 +190,11 @@
    "source": [
     "#### Short answer explanation for 1.2. Provide a brief justification of your choice of $Q_f$ in this cell.\n",
     "\n",
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE\n",
+    "\n",
+    "Distance from the line $y=0.5x$ is $d=\\dfrac{|0.5x-y|}{\\sqrt{2}}$\n",
+    "\n",
+    "So, $2d^2=0.25x^2+y^2-xy$ if we set this as the cost and the values of the matrix as above we get the same cost."
    ]
   },
   {
@@ -328,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1253,9 +1265,7 @@
       "(51, 31)\n",
       "(51, 31)\n",
       "(51, 31)\n",
-      "Terrible Control Choice\n",
       "-1.0\n",
-      "Optimal Control\n",
       "-1\n"
      ]
     }
@@ -1272,12 +1282,10 @@
     "terrible_control_choice = -Pi_optimal\n",
     "qbin_sample = 10\n",
     "qdotbin_sample = 3\n",
-    "print \"Terrible Control Choice\"\n",
     "print terrible_control_choice[qdotbin_sample][qbin_sample]\n",
     "\n",
     "q = qbins[qbin_sample]\n",
     "qdot = qdotbins[qdotbin_sample]\n",
-    "print \"Optimal Control\"\n",
     "print -get_optimal_control_problem_3_1(q,qdot)\n",
     "\n",
     "# Recommend investigating more the shapes of some of these and how they relate"
@@ -1318,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1385,9 +1393,9 @@
     "\n",
     "# This sets up the mesh of sample points over\n",
     "# which we'll run the value iteration algorithm.\n",
-    "num_q_bins = 31\n",
+    "num_q_bins =31\n",
     "qbins = np.linspace(-3., 3., num_q_bins)\n",
-    "num_qdot_bins = 51\n",
+    "num_qdot_bins =51\n",
     "qdotbins = np.linspace(-3., 3., num_qdot_bins)\n",
     "state_grid = [set(qbins), set(qdotbins)]\n",
     "\n",
@@ -1440,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2316,73 +2324,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 5,  6,  6,  6,  7,  7,  7,  7,  8,  8,  8,  8,  8,  9,  9,  9,  9,\n",
-       "         9,  9, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 12, 12, 12, 12,\n",
-       "        12, 13, 13, 13, 13, 14, 14, 14, 14, 15, 15, 15, 15, 16, 16, 16, 16,\n",
-       "        17, 17, 17, 18, 18, 18, 19, 19, 20, 20, 21, 21, 22, 23, 24, 25, 26,\n",
-       "        27, 28, 29, 29, 30, 30, 31, 31, 32, 32, 32, 33, 33, 33, 34, 34, 34,\n",
-       "        34, 35, 35, 35, 35, 36, 36, 36, 36, 37, 37, 37, 37, 38, 38, 38, 38,\n",
-       "        38, 39, 39, 39, 39, 39, 40, 40, 40, 40, 40, 40, 41, 41, 41, 41, 41,\n",
-       "        41, 42, 42, 42, 42, 42, 43, 43, 43, 43, 44, 44, 44, 45]),\n",
-       " array([30, 28, 29, 30, 27, 28, 29, 30, 26, 27, 28, 29, 30, 25, 26, 27, 28,\n",
-       "        29, 30, 24, 25, 26, 27, 28, 29, 23, 24, 25, 26, 27, 22, 23, 24, 25,\n",
-       "        26, 21, 22, 23, 24, 20, 21, 22, 23, 19, 20, 21, 22, 18, 19, 20, 21,\n",
-       "        18, 19, 20, 17, 18, 19, 17, 18, 16, 17, 16, 17, 16, 16, 16, 15, 14,\n",
-       "        14, 14, 13, 14, 13, 14, 12, 13, 11, 12, 13, 10, 11, 12,  9, 10, 11,\n",
-       "        12,  8,  9, 10, 11,  7,  8,  9, 10,  6,  7,  8,  9,  4,  5,  6,  7,\n",
-       "         8,  3,  4,  5,  6,  7,  1,  2,  3,  4,  5,  6,  0,  1,  2,  3,  4,\n",
-       "         5,  0,  1,  2,  3,  4,  0,  1,  2,  3,  0,  1,  2,  0]))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(final_computed_policy==-Pi_optimal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# matrices with policies opposite to the ones obtained with analytical equations/Question 3.1\n",
-    "Q_noteq=Q[np.where(final_computed_policy==-Pi_optimal)]\n",
-    "Qdot_noteq=Qdot[np.where(final_computed_policy==-Pi_optimal)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.92, -1.8 , -1.68, -1.56])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index=np.where(Q_noteq==2)\n",
-    "Qdot_noteq[index]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2410,6 +2351,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matrices with policies opposite to the ones obtained with analytical equations/Question 3.1\n",
+    "Q_noteq=Q[np.where(final_computed_policy==-Pi_optimal)]  # Q where action is oppsoite to the optimal one\n",
+    "Qdot_noteq=Qdot[np.where(final_computed_policy==-Pi_optimal)] # Qdot where action is opposite to the optimal one\n",
+    "final_computed_policy_notep=final_computed_policy[np.where(final_computed_policy==-Pi_optimal)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.92, -1.8 , -1.68, -1.56])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index=np.where(Q_noteq==2)\n",
+    "Qdot_noteq[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1., -1., -1., -1.])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pi_optimal_noteq=Pi_optimal[np.where(final_computed_policy==-Pi_optimal)]\n",
+    "Pi_optimal_noteq[index] # analytical solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  1.,  1.,  1.])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_computed_policy_notep[index] # value iteration "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analytical Solution:\n",
+      "[ 2.00081624  2.00525952  2.01388684  2.02708796]\n",
+      "Value Iteration:\n",
+      "[ 3.03438429  2.85650376  2.74987935  2.69960169]\n"
+     ]
+    }
+   ],
+   "source": [
+    "J=J_iterations[:,:,-1]\n",
+    "J_optimal_not_eq=J_optimal[np.where(final_computed_policy==-Pi_optimal)]\n",
+    "print 'Analytical Solution:'\n",
+    "print J_optimal_not_eq[index]\n",
+    "J_optimal_not_eq_VI=J[np.where(final_computed_policy==-Pi_optimal)]\n",
+    "print 'Value Iteration:'\n",
+    "print J_optimal_not_eq_VI[index]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2417,11 +2458,23 @@
     "\n",
     "a) YOUR ANSWER HERE\n",
     "\n",
+    "$\\dot q_0=[-1.92, -1.8 , -1.68, -1.56]$\n",
+    "\n",
     "b) YOUR ANSWER HERE\n",
+    "\n",
+    "Value Iteration Action:$[1,1,1,1]$\n",
+    "\n",
+    "Analytical Solution: $[-1,-1,-1,-1]$\n",
     "\n",
     "c) YOUR ANSWER HERE\n",
     "\n",
-    "d) YOUR ANSWER HERE"
+    "Estimated time by Analytical Solution: $[2.00081624, 2.00525952, 2.01388684, 2.02708796]$\n",
+    "\n",
+    "Estimated time by Value Iteration$[3.03438429, 2.85650376, 2.74987935, 2.69960169]$\n",
+    " \n",
+    "d) YOUR ANSWER HERE\n",
+    "\n",
+    "The values are different because the actions taken at those points are different."
    ]
   },
   {
@@ -2447,7 +2500,8 @@
    "source": [
     "#### Short answer for 4.2. \n",
     "\n",
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE\n",
+    "For `num_q_bins=30` and `num_qdot_bins=40` the value iteration algorithm does not converge."
    ]
   },
   {
@@ -2469,9 +2523,13 @@
    "source": [
     "#### Short answers for 4.3. \n",
     "\n",
-    "a) YOUR ANSWER HERE\n",
+    "a) YOUR ANSWER HERE:\n",
     "\n",
-    "b) YOUR ANSWER HERE"
+    "One of the main reasons to use the value iteration algorithm is because we may not be able to conjure up analytical forms everytime due to computational issues and thus we may need come up with approximate solutions.\n",
+    "\n",
+    "b) YOUR ANSWER HERE:\n",
+    "\n",
+    "The analytical soultion gives us the exact solutions without any errors also value iteration may not converge if we do not choose proper parameters like on question 4.2"
    ]
   },
   {
@@ -2544,29 +2602,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Problem 1_1: 0.00/2.00.\n",
-      "  * Test Failed: Q_f must be symmetric\n",
+      "Test Problem 1_1: 2.00/2.00.\n",
       "\n",
-      "Test Problem 1_2: 0.00/2.00.\n",
-      "  * Test Failed: We produced a ton of random samples, and the one that was\n",
-      "  * closest to the line y=0.5x didn't have the smallest cost according\n",
-      "  * to Q_f. Try again!\n",
+      "Test Problem 1_2: 2.00/2.00.\n",
       "\n",
-      "Test Problem 3_1 Optimal Control Input: 0.00/2.00.\n",
-      "  * Test Failed: The optimal control at [q=0.0,qd=0.0] should be 0.\n",
+      "Test Problem 3_1 Optimal Control Input: 2.00/2.00.\n",
       "\n",
-      "Test Problem 3_1 Time (Cost) To Go: 0.00/2.00.\n",
-      "  * Test Failed: An optimal time-to-go test case for [q=5.00, qd=15.00]\n",
-      "  * failed.\n",
+      "Test Problem 3_1 Time (Cost) To Go: 2.00/2.00.\n",
       "\n",
-      "TOTAL SCORE (automated tests only): 0.00/8.00\n"
+      "TOTAL SCORE (automated tests only): 8.00/8.00\n",
+      "\n"
      ]
     }
    ],
